PLD-COMP-RENDU/pld-comp/tests/ifcc-test-output/testfiles-test-erreurs-Test-4_5-237_erreur_express_logique_ou_et/gcc-compile.txt
input.c: In function ‘main’:
input.c:2:15: error: expected expression before ‘|’ token
    2 |     return 28&|9;
      |               ^

return code: 1
